# lvgl-esp

./: CMakeLists.txt  Kconfig  LICENSE  idf_component.yml
include/: lv_esp.h  lv_esp_display.h  lv_esp_event.h  lv_esp_mem.h  lvgl_esp.h
src/: lv_esp.c  lv_esp_display.c  lv_esp_event.c
